--- a/vibs.html
+++ b/vibs.html
@@ -261,7 +261,7 @@
 
   <aside class="right" aria-label="Extras">
     <div class="image-placeholder" id="imagePlaceholder">
-      <iframe src="https://drive.google.com/file/d/1jb2tjM2Ajy6Poy8fjhy-qP_s7x-SDB-I/preview" allow="autoplay"></iframe>
+      <img src="vib.jpeg">
     </div>
     <p class="upload-hint">Meri pyaari vibruu, I love you.</p>
 
@@ -405,3 +405,4 @@
 </script>
 </body>
 </html>
+
