--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
 
   <aside class="right" aria-label="Extras">
     <div class="image-placeholder" id="imagePlaceholder">
-      <img src="vib.jpeg">
+      <iframe src="https://drive.google.com/file/d/1jb2tjM2Ajy6Poy8fjhy-qP_s7x-SDB-I/preview" width="640" height="480" allow="autoplay"></iframe>
     </div>
     <p class="upload-hint">Meri pyaari vibruu, I love you.</p>
 
@@ -405,4 +405,5 @@
 </script>
 </body>
 </html>
+
 
