--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
 
   <section class="left">
     <h1 id="main-title" class="title">Vibru ka birthday <span aria-hidden="true">🥳🥳🎊</span></h1>
-    <p class="subtitle">Counting down to the big day — make it memorable!</p>
+    <p class="subtitle">Counting down to the big day —Love you soo muchhhhhh </p>
 
     <div class="countdown" aria-live="polite" aria-atomic="true">
       <div class="time-segment" title="days">
@@ -405,6 +405,7 @@
 </script>
 </body>
 </html>
+
 
 
 
