--- a/index.html
+++ b/index.html
@@ -261,7 +261,8 @@
 
   <aside class="right" aria-label="Extras">
     <div class="image-placeholder" id="imagePlaceholder">
-      <iframe src="https://drive.google.com/file/d/1jb2tjM2Ajy6Poy8fjhy-qP_s7x-SDB-I/preview" width="640" height="480" allow="autoplay"></iframe>
+    <!---  <iframe src="https://drive.google.com/file/d/1jb2tjM2Ajy6Poy8fjhy-qP_s7x-SDB-I/preview" width="640" height="480" allow="autoplay"></iframe> -->
+      <iframe src="https://drive.google.com/file/d/1k5r5C6isaBs6Vr54L8csUxuFER95yROg/preview" width="640" height="480" allow="autoplay"></iframe>
     </div>
     <p class="upload-hint">Meri pyaari vibruu, I love you.</p>
 
@@ -405,6 +406,7 @@
 </script>
 </body>
 </html>
+
 
 
 
